# ScubaTracker

./: Cargo.toml
migrations/00000000000000_diesel_initial_setup/: up.sql
migrations/2021-07-11-193210_create_posts/: down.sql  up.sql
src/: lib.rs  models.rs  schema.rs
static/: index.html
templates/: table.html.tera
