cargo-features = ["edition2021"]

[package]
name = "scubatracker"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "src/bin/main.rs"

[[bin]]
name = "seed"
path = "src/bin/seed.rs"

[lib]
name = "scubalib"
path = "src/lib.rs"


[dependencies]
rocket = "0.4.10"
rocket_contrib = { version = "0.4.10", default-features = false, features = ["tera_templates"] }

serde = "1.0.11"
serde_derive = "1.0.11"
serde_json = "1.0.2"
tera = "1.12.0"
chrono = { version= "0.4.19", features = ["serde"] }

# DB
diesel = { version = "1.4.7", features = ["postgres", "chrono"] }

r2d2 = "*"
r2d2-diesel = "*"

# # SYS
dotenv = "0.15.0"


fake = "2.4.0"